<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBgColor"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >
        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_your_space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_your_dreams"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_main0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_percent="0.8"
        app:lottie_rawRes="@raw/blueprint"
        app:lottie_autoPlay="true"
        app:lottie_repeatMode="reverse"
        app:lottie_loop="true"
        app:lottie_speed="1"
        />

    <ImageView
        android:id="@+id/lottie_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_percent="0.8"
        android:src="@drawable/splash_logo"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_main"
        android:orientation="vertical"
        >
        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/modern_house_design"
            android:textColor="@color/black"
            android:lines="1"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            />
        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="Your Home Design journey begins here"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:lines="1"
            android:textSize="11sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_96sdp"
        >


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading Ads wait please . . ."
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_gravity="center"
            />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:progressTint="@color/black"
            android:indeterminateTint="@color/black"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lottie_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_percent="0.5"
        android:paddingVertical="@dimen/_9sdp"
        android:backgroundTint="@color/primaryColor"
        android:visibility="gone"
        android:text="Let's Start"
        android:textColor="@color/white"
        />
    <FrameLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foregroundGravity="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>